fixes hero banner background gradient and homepage z-index issue

--- a/src/campaign/sass/components/_hero-banner.scss
+++ b/src/campaign/sass/components/_hero-banner.scss
@@ -244,7 +244,7 @@ $hero-text-colour: #fff;
 .hero-banner__background--apprentice-alim{
   background-image: linear-gradient(255deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/apprentice/alim-hero-1.jpg");
   .hero-banner--right-aligned & {
-    background-image: linear-gradient(140deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/apprentice/alim-hero-1.jpg") !important;
+    // background-image: linear-gradient(255deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/apprentice/alim-hero-1.jpg") !important;
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
@@ -257,7 +257,7 @@ $hero-text-colour: #fff;
 .hero-banner__background--apprentice-hosanna{
   background-image: linear-gradient(255deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/apprentice/hozanna-hero-1.jpg");
   .hero-banner--right-aligned & {
-    background-image: linear-gradient(140deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 80%), url("../images/apprentice/hozanna-hero-1.jpg") !important;
+    // background-image: linear-gradient(255deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 80%), url("../images/apprentice/hozanna-hero-1.jpg") !important;
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
@@ -270,7 +270,7 @@ $hero-text-colour: #fff;
 .hero-banner__background--apprentice-sarah{
   background-image: linear-gradient(255deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/apprentice/sarah-hero-1.jpg");
   .hero-banner--right-aligned & {
-    background-image: linear-gradient(140deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/apprentice/sarah-hero-1.jpg");
+    // background-image: linear-gradient(255deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/apprentice/sarah-hero-1.jpg");
   -moz-transform: scaleX(-1);
   -o-transform: scaleX(-1);
   -webkit-transform: scaleX(-1);
@@ -284,7 +284,7 @@ $hero-text-colour: #fff;
   background-image: linear-gradient(255deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/apprentice/ella-hero-1.jpg");
  
   .hero-banner--right-aligned & {
-    background-image: linear-gradient(140deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 80%), url("../images/apprentice/ella-hero-1.jpg");
+    // background-image: linear-gradient(255deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 80%), url("../images/apprentice/ella-hero-1.jpg");
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
@@ -297,7 +297,7 @@ $hero-text-colour: #fff;
 .hero-banner__background--employer-gail{
   background-image: linear-gradient(225deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/employer/gail-hero-1.jpg");
   .hero-banner--right-aligned & {
-    background-image: linear-gradient(140deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/employer/gail-hero-1.jpg");
+    // background-image: linear-gradient(255deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/employer/gail-hero-1.jpg");
   -moz-transform: scaleX(-1);
   -o-transform: scaleX(-1);
   -webkit-transform: scaleX(-1);
@@ -310,7 +310,7 @@ $hero-text-colour: #fff;
 .hero-banner__background--employer-bendy{
   background-image: linear-gradient(225deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/employer/bendy-hero-1.jpg");
   .hero-banner--right-aligned & {
-    background-image: linear-gradient(140deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/employer/bendy-hero-1.jpg");
+    // background-image: linear-gradient(255deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/employer/bendy-hero-1.jpg");
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
@@ -323,7 +323,7 @@ $hero-text-colour: #fff;
 .hero-banner__background--employer-annie{
   background-image: linear-gradient(225deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/employer/annie-hero-1.jpg");
   .hero-banner--right-aligned & {
-    background-image: linear-gradient(140deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/employer/annie-hero-1.jpg");
+    // background-image: linear-gradient(255deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%), url("../images/employer/annie-hero-1.jpg");
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
